# esp-emac

./: BACKLOG.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: embassy_net_lan8720a.rs
src/: clock.rs  emac.rs  embassy.rs  embassy_net.rs  error.rs  instrumentation.rs  interrupt.rs  lib.rs  reset.rs
src/dma/: engine.rs  mod.rs  ring.rs
src/dma/descriptor/: bits.rs  mod.rs
src/regs/: dma.rs  ext.rs  gpio.rs  mac.rs
