[package]
name          = "esp-emac"
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.75"
authors       = ["Viacheslav Bocharov <v@baodeep.com>", "JetHome (r)"]
license       = "GPL-2.0-or-later OR Apache-2.0"
description   = "ESP32 EMAC bare-metal Ethernet MAC driver with DMA, RMII, and MDIO"
repository    = "https://github.com/jethub-iot/esp-emac"
keywords      = ["embedded", "no-std", "esp32", "ethernet", "emac"]
categories    = ["embedded", "no-std", "hardware-support"]

[dependencies]
embedded-hal       = "1.0"
esp-hal            = { version = "1.0.0", features = ["esp32", "unstable"], optional = true }
eth-mdio-phy       = { version = "0.1.0", path = "../eth-phy/crates/eth-mdio-phy", optional = true }
embassy-net-driver = { version = "0.2", optional = true }
embassy-sync       = { version = "0.7", optional = true }
critical-section   = { version = "1.2", optional = true }
defmt              = { version = "0.3", optional = true }

# Phase 3 staging: register helpers (`MacRegs`, `DmaRegs`, `ExtRegs`,
# `GpioMatrix`, `ResetController`) come from ph-esp32-mac for now.
# They will be copied into our own `regs/*` modules in a follow-up so
# we can drop this dependency entirely.
ph-esp32-mac = { git = "https://github.com/jethome-iot/ph-esp32-mac", branch = "feat/expose-gpio-matrix-and-reset", default-features = false, features = ["esp32", "critical-section"] }

[dev-dependencies]
critical-section = { version = "1.2", features = ["std"] }

[features]
default     = []
mdio-phy    = ["dep:eth-mdio-phy"]
# Activate hardware integrations (esp-hal interrupt binding etc.)
# Required for the firmware build; tests run without it.
esp-hal     = ["dep:esp-hal"]
embassy-net = ["dep:embassy-net-driver", "dep:embassy-sync", "dep:critical-section"]
defmt       = ["dep:defmt", "ph-esp32-mac/defmt"]
